syntax = "proto3";

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";
import "message/UserActionProto.proto";

option java_package = "ru.yandex.practicum.grpc.collector.controller";
option java_outer_classname = "UserActionControllerProto";

package collector;

service UserActionController {
  rpc CollectUserAction (UserActionProto) returns (google.protobuf.Empty);
}
