syntax = "proto3";

option java_multiple_files = true;
option java_package = "ru.yandex.practicum.grpc.recommendation";

package recommendations;

message UserPredictionsRequestProto {
  int32 user_id = 1;
  int32 max_results = 2;
}

message SimilarEventsRequestProto {
  int32 event_id = 1;
  int32 user_id = 2;
  int32 max_results = 3;
}

message InteractionsCountRequestProto {
  repeated int32 event_id = 1;
}

message RecommendedEventProto {
  int32 event_id = 1;
  float score = 2;
}

service RecommendationsController {
  rpc GetRecommendationsForUser(UserPredictionsRequestProto)
      returns (stream RecommendedEventProto);

  rpc GetSimilarEvents(SimilarEventsRequestProto)
      returns (stream RecommendedEventProto);

  rpc GetInteractionsCount(InteractionsCountRequestProto)
      returns (stream RecommendedEventProto);
}
